<resources>
    <string name="app_name">My Application</string>
    <string name="logo">logo</string>
    <string name="sign_in">sign in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="create_account">create_account</string>
    <string name="do_not_have_an_account">do not_have_an_account</string>
    <string name="full_name">full_name</string>
    <string name="student_registration">Student Registration</string>
    <string name="confirm_password">confirm_password</string>
    <string name="select">select Institution</string>
    <string name="hod_details">HOD details</string>
    <string name="employee_number">employee number</string>
    <string name="register">register</string>
    <string name="empoyee_number">register</string>
    <string name="choose_field_description">Choose a field</string>
    <string name="next_button_description">Next button</string>
    <string name="enter_your_best_six_subjects">Enter Your best six subjects</string>
    <string name="subject">Subject</string>
    <string name="grade">Grade</string>
    <string name="apply">APPLY</string>

    <string-array name="it_institutions">
        <item>University of Eswatini</item>
        <item>Limkokwing University</item>
        <item>Christian University</item>
        <!-- Add more institutions as needed -->
    </string-array>

    <string-array name="art_design_institutions">
        <item>Limkokwing University</item>
    </string-array>

    <string-array name="humanities_institutions">
        <item>University of Eswatini</item>
        <item>Limkokwing University</item>
        <item>Southern Africa Nazarine University</item>
        <item>william pitcher</item>
        <item>Eswatini Collage of Technology</item>
    </string-array>


    <string-array name="business_institutions">
        <item>University of Eswatini</item>
        <item>Limkokwing University</item>
        <item>Southern Africa Nazarine University</item>
        <item>william pitcher</item>
        <item>Eswatini Collage of Technology</item>
    </string-array>

    <string-array name="sciences_institutions">
        <item>University of Eswatini</item>
        <item>Limkokwing University</item>
        <item>Southern Africa Nazarine University</item>
        <item>william pitcher</item>
        <item>Eswatini Collage of Technology</item>
    </string-array>

    <string-array name="engineering_institutions">
        <item>University of Eswatini</item>
        <item>Eswatini Collage of Technology</item>
    </string-array>

    <string-array name="communications_and_media_institutions">
        <item>Limkokwing University</item>

    </string-array>

</resources>