<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/screen"
    tools:context=".sign_in">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="66dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/clapps"
            android:orientation="vertical"
            android:padding="24dp"
            >

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="italic"
                 />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"

                android:autofillHints="username"
                android:drawableStart="@drawable/person"
                android:drawablePadding="8dp"
                android:hint="username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/blue"
                android:textColorHighlight="@color/blue"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"

                android:autofillHints="password"
                android:drawableStart="@drawable/padlock"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lightblue"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:text="@string/do_not_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/lightblue"
        android:text="@string/create_account"
        android:textColor="@color/white">


    </Button>




</LinearLayout>






